tests/parser/ttypecommandcomma.nim
discard """
  errormsg: "invalid indentation"
  line: 8
  column: 19
"""

type
  Foo = call(1, 2), 3:
    4